[package]
name = "holup"
version = "0.1.1"
edition = "2021"
authors = ["Axlefublr"]
license = "MIT"
description = "This is literally just an infinite loop. Check out the readme if you're intrigued :D"
readme = "README.md"
homepage = "https://github.com/Axlefublr/holup"
repository = "https://github.com/Axlefublr/holup"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
